# arc-llm

./: .gitignore  GITHUB_SETUP.md  README.md  arc_llm.py  arc_llm_colab.ipynb  arc_llm_web_colab.ipynb  claude_api.py  colab_runner.ipynb  example.py  pyproject.toml  requirements.txt  run_example.py  setup.py  simplified_spatiallm.py  standalone_colab.ipynb  text_to_layout.py  web_interface.py
arcllm/: __init__.py
examples/: complex_house.txt  complex_house_description.txt  living_room.txt  living_room_description.txt  living_room_layout.txt
templates/: index.html  view.html
