[tool.poetry]
name = "arcllm"
version = "0.1.0"
description = "A project that adapts SpatialLM to work with text prompts instead of point cloud data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
transformers = "^4.40.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
einops = "^0.7.0"
torchsparse = "^1.4.0"
rerun-sdk = "^0.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
